# todolist

./: .docker_env  .docker_env-ci  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose-ci.yaml  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: action.yaml
bot/: models.py  serializers.py  utils.py  views.py
bot/migrations/: 0001_initial.py  0002_alter_tguser_chat_id.py  0003_tguser_verification_code.py  0004_alter_tguser_chat_id.py  0005_alter_tguser_chat_id_alter_tguser_user_ud.py  0006_alter_tguser_chat_id_alter_tguser_user_ud.py
bot/tg/: __init__.py  bot.py  client.py  dc.py
core/: admin.py  managers.py  models.py  serializers.py  urls.py  validators.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_groups_alter_user_user_permissions.py
goals/: admin.py  models.py  permissions.py  serializers.py  urls.py  views.py
goals/migrations/: 0001_initial.py  0002_rename_create_goalcategory_created_and_more.py  0003_remove_goal_category_goal_category_and_more.py  0004_alter_goalcomment_options_and_more.py  0005_alter_goal_category.py  0006_board_goalcategory_board_boardparticipant.py  0007_create_new_objects.py  0008_alter_boardparticipant_board.py  0009_alter_goalcategory_board.py  0010_alter_boardparticipant_board_and_more.py  0011_alter_board_created_alter_board_updated_and_more.py
goals/models/: __init__.py  board.py  goal.py  goal_category.py  goal_comment.py
goals/serializers/: board.py  (+4 more)
postgresql/: default.conf  docker-compose.yaml
tests/: factories.py
todolist/: settings.py  urls.py
(+10 files in other folders)
